Adding the Dutch Auction Version 3 changes

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,16 @@ v2.0/node_modules
 v2.0/.env
 v2.0/typechain
 v2.0/typechain-types
+v3.0/node_modules
+v3.0/.env
+v3.0/typechain
+v3.0/typechain-types
 
 # Hardhat files
 v1.0/cache
 v1.0/artifacts
 v2.0/cache
 v2.0/artifacts
+v3.0/cache
+v3.0/artifacts
 
